--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,5 @@
-{}
+{
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "tailwindAttributes": ["activeClassName", "disabledClassName"],
+  "tailwindFunctions": ["clsx", "cn"]
+}
