--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lexical/list": "^0.14.2",
+    "@lexical/markdown": "^0.14.2",
     "@lexical/react": "^0.14.2",
+    "@lexical/rich-text": "^0.14.2",
     "clsx": "^2.1.0",
     "jotai": "^2.7.1",
     "lexical": "^0.14.2",
