--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@lexical/markdown": "^0.14.2",
     "@lexical/react": "^0.14.2",
     "@lexical/rich-text": "^0.14.2",
+    "@radix-ui/react-select": "^2.0.0",
     "clsx": "^2.1.0",
     "jotai": "^2.7.1",
     "lexical": "^0.14.2",
