--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@lexical/react": "^0.14.2",
     "@lexical/rich-text": "^0.14.2",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-toolbar": "^1.0.4",
     "clsx": "^2.1.0",
     "jotai": "^2.7.1",
     "lexical": "^0.14.2",
