feat: add TreeView when on DEV environment

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,12 @@
 {
   "plugins": ["prettier-plugin-tailwindcss"],
-  "tailwindFunctions": ["clsx", "cn"]
+  "tailwindFunctions": ["clsx", "cn"],
+  "tailwindAttributes": [
+    "treeTypeButtonClassName",
+    "timeTravelButtonClassName",
+    "timeTravelPanelButtonClassName",
+    "timeTravelPanelClassName",
+    "timeTravelPanelSliderClassName",
+    "viewClassName"
+  ]
 }
